Fix breadcrumb styling

--- a/src/css/components/navigation-bar.less
+++ b/src/css/components/navigation-bar.less
@@ -129,6 +129,16 @@
 
     .navigation-items {
       display: block;
+
+      span {
+
+        &:last-child {
+
+          .icon-chevron {
+            display: none;
+          }
+        }
+      }
     }
 
     .navigation-item-previous {
