--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -22,6 +22,20 @@
   }
 }
 
+.caret {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid @neutral;
+  display: inline-block;
+  margin-left: 10px;
+  transition: transform 0.2s;
+  vertical-align: middle;
+
+  &.is-expanded {
+    transform: rotate(180deg);
+  }
+}
+
 .icon-arrow {
   fill: @white;
 }
