Implement dropdowns, checkboxes, and two-column layout

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -22,9 +22,10 @@
   }
 }
 
-.clickable {
+.section-header-primary.clickable {
   cursor: pointer;
   display: inline-block;
+  padding-right: 10px;
 
   &:hover {
     color: @purple;
